Fixed the side archive
I fixed the issue where the side archive was overlapping the footer.

--- a/Paradise/Paradise/Content/style.css
+++ b/Paradise/Paradise/Content/style.css
@@ -384,6 +384,8 @@ footer {
   min-height: 200px;
   background-color: #8ebc3d;
   padding: 1.5% 0 0 0;
+  position: relative;
+  z-index: 2;
 }
 
 .copyright{
